top 10 prescribers functionality

--- a/drug/styles/index.scss
+++ b/drug/styles/index.scss
@@ -1,6 +1,6 @@
 .druglist {
     overflow-y: scroll;
-    height: 500px;
+    height: 600px;
 }
 
 .druginstance:hover {
@@ -19,3 +19,6 @@ td {
     text-align: center;
 }
 
+table {
+    margin: auto;
+}
