put everything on one page

--- a/drug/templates/index.html
+++ b/drug/templates/index.html
@@ -22,6 +22,11 @@
                 </div>
             </div>
 
+            <div class="col">
+                   <%block name="top10">
+                   </%block> 
+            </div>
+
         </div>
     </div>
 </%block>
