--- a/drug/styles/index.scss
+++ b/drug/styles/index.scss
@@ -16,7 +16,12 @@ td {
 }
 
 .center {
-    // text-align: center;
+    text-align: center;
+}
+
+.opiate {
+    color: red;
+    font-size: 14pt;
 }
 
 table {
